[tool.poetry]
name = "rvc-cli"
version = "1.0"
description = "rvc_cli fork"
authors = ["Your Name <you@example.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = ">=3.9"  # Specify your desired Python version
beautifulsoup4 = "*"
ffmpeg-python = ">=0.2.0"
numpy = "1.23.5"
requests = "2.31.0"
tqdm = "*"
wget = "*"
faiss-cpu = "1.7.3"
librosa = "0.9.1"
pydub = "0.25.1"
pyworld = "0.3.4"
praat-parselmouth = "0.4.2"
resampy = "0.4.2"
scipy = "1.11.1"
sounddevice = "0.4.6"
soundfile = "0.12.1"
torchaudio = "2.1.1"
noisereduce = "*"
fairseq = {git = "https://github.com/IAHispano/fairseq", platform = "linux"}
numba = "*"
onnxruntime = "*"
onnxruntime_gpu = "1.15.1"
torch = "2.1.1"
torchcrepe = "0.0.21"
torchgen = ">=0.0.1"
torch_directml = "*"
torchvision = "0.16.1"
einops = "*"
local-attention = "*"
matplotlib = "3.7.2"
tensorboard = "*"
ffmpy = "0.3.1"
tensorboardX = "*"
edge-tts = "6.1.9"
pydantic = "*"
fastapi = "*"
uvicorn = "*"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
